# amazon-spi-ops

./: .env.example  .env.live.amazon.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  Dockerfile.worker  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260328_0001_initial_ops_schema.py  20260328_0002_catalog_import_jobs.py  20260328_0003_aplus_language_metadata.py  20260328_0004_aplus_assets.py  20260329_0005_aplus_publish_job_payloads.py  20260329_0006_aplus_draft_variants.py
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  router.py
backend/app/core/: __init__.py  config.py  database.py  migrations.py  security.py
backend/app/models/: __init__.py  entities.py  enums.py  mixins.py
backend/app/schemas/: aplus.py  auth.py  dashboard.py  event.py  inventory.py  notification.py  product.py
backend/app/services/: aplus_asset_service.py  aplus_image_service.py  aplus_optimization.py  aplus_readiness.py  aplus_service.py  auth_service.py  bootstrap_service.py  catalog_import_service.py  dashboard_service.py  inventory_service.py  media_storage.py  notification_service.py  (+4 more)
backend/tests/: test_amazon_aplus_contract.py  test_amazon_client.py  test_aplus_asset_service.py  test_aplus_image_service.py  test_aplus_improvement.py  test_aplus_optimization.py  test_aplus_service.py  test_auth_routes.py  test_auth_security.py  test_catalog_import_mapper.py  test_dashboard_routes.py  test_health.py  test_models_metadata.py  test_slack_formatter.py
(+80 files in other folders)
