[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amazon-seller-ops-backend"
version = "0.1.0"
description = "Backend services for Amazon Seller Ops."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16.5,<2.0.0",
  "dramatiq[redis]>=1.17.1,<2.0.0",
  "fastapi>=0.116.0,<1.0.0",
  "httpx>=0.28.1,<1.0.0",
  "pydantic-settings>=2.10.1,<3.0.0",
  "psycopg[binary]>=3.2.10,<4.0.0",
  "redis>=6.4.0,<7.0.0",
  "sqlalchemy>=2.0.43,<3.0.0",
  "tenacity>=9.1.2,<10.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.18.2,<2.0.0",
  "pytest>=8.4.2,<9.0.0",
  "ruff>=0.13.2,<1.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
